dbeaver/dbeaver#39422 Fix Linux diagram saving